tdf#142464: do not escape '/' is AM/PM when importing DOCX.

See also commit a2e964afc5187fc1e3b38720ec10ad9856b87020, doing the
same for DOC.

Change-Id: Ib0ddb36de8589f9264fe857b20a6ef2aa2607c52
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/118369
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit cd0ab69d4afee0c77884ae17ab9410216695b58b)